# stack_machine

./: .$arch.drawio.bkp  arch.drawio  code.asm  code.json  control_unit.py  data_path.py  golden_test.py  isa.py  machine.py  main.py  pyproject.toml  readme.md  translator.py  uarch.py
.github/workflows/: ci.yml  pylint.yml
asm/: cat.asm  cat.json  cat_com.txt  hello_username.asm  hello_username_com.txt  hello_world.asm  hello_world_com.txt  hello_world_out.txt  math.asm  math.json  math_com.txt  prob1.asm  prob1_com.txt
golden/: cat.yml  hello_username.yml  hello_world.yml  math.yml  prob1.yml
resources/: .$arch.drawio.bkp  arch.drawio  control_unit.drawio  data_path.drawio
