[tool.poetry]
name = "stack_machine"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolmakov <kolmakov125@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.0"
mypy = "^1.10.0"
ruff = "^0.4.0"
pytest = "^8.2.0"
pytest-golden = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
